2008-03-25  Ramon Novoa  <rnovoa@artica.es>

	*  util/tentacle_serverd: Added to repository. Tentacle server
	   simple startup script.

2008-03-19  Manuel Arostegui <marostegui@artica.es>

     * pandora_server.spec: Added to repository. New spec
          file for 1.3.X pandora server version.

    * specs/*: Deleted this directory and the files inside,
          they are all deprecated.

2008-03-13  Sancho Lerena <slerena@gmail.com>

    * lib/PandoraFMS/Config.pm: New pandora_startlog function. Added support to manage PID
    in daemon mode. Added support for quiet mode. Added prediction_threads option. 

    * lib/PandoraFMS/Tools.pm: daemonize function now manages PID and store in a file when
    it forks. 

    * lib/PandoraFMS/DB.pm: Removed some gotos.  Modified generic-access DB functions and 
    added one to manage entire row in a hash: get_db_free_row ().

    * bin/pandora_plugin: A lot of fixes. This code actually works fine :-)

    * bin/pandora_prediction: First version of usable code. Works but not seriously tested.

    * bin/pandora_network: Adjusted to work with new features (quiet mode) and new db 
    schema. Some code cleanup.

    * util/pandora_dbstress.pl: Updated default values.

    * util/pandora_dbstress.README: Improved README documentation for dbstress tool.

2008-03-11 Manuel Arostegui <marostegui@artica.es>

        * pandora_server, pandora_network, pandora_recon:
        Added pidof checking to check the PID of the process.

2008-03-06  Sancho Lerena <slerena@gmail.com>

        *  conf/pandora_server.conf: New tokens for the new servers.

        * lib/PandoraFMS/Config.pm: Added support for WMI Server.

        * lib/PandoraFMS/DB.pm: Updated pandora_updateserver function.

        * bin/pandora_wmi: Skeleton of WMI server, not functional, only
        a concept proof and initializacion for create a WMI server.

        * bin/pandora_plugin: Almost functional code, fully skeleton,
        initializacion and modules.
