@@ -1,3 +1,8 @@
+2008-03-27  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Config.pm, lib/PandoraFMS/DB.pm: Added
+	  compound alert support.
+
 2008-03-25  Ramon Novoa  <rnovoa@artica.es>
 
 	*  util/tentacle_serverd: Added to repository. Tentacle server
